--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "vxe-table": "^2.9.23",
+    "xe-utils": "^2.7.13"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
